--- a/SerilogDemoApp/appsettings.json
+++ b/SerilogDemoApp/appsettings.json
@@ -1,9 +1,27 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+
+    "AllowedHosts": "*",
+    "Serilog": {
+        "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+        "MinimumLevel": "Information",
+        "WriteTo": [
+            { "Name": "Console" },
+            {
+                "Name": "File",
+                "Args": {
+                    "path": "Logs/app.log",
+                    "rollingInterval": "Day"
+                }
+            }
+        ],
+        "Enrich": [ "FromLogContext" ]
     }
-  },
-  "AllowedHosts": "*"
 }
+ 
+ 
